# course-tools

./: Dockerfile  Makefile  README.org  course-tools.make  docker.make  pyproject.toml
tools/: reorg.py  reorg_filter.py  scaffold.py
