[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["skip"]

[tool.poetry.dependencies]
python = "^3.6"
plumbum = "^1.6"
panflute = "^1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
reorg = "tools.reorg:main"
scaffold = "tools.scaffold:main"
reorg-filter = "tools.reorg_filter:main"

